feat: pop small tests passed. no memory leak. performance not bad.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 project(bt)
-set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(bt main.cpp)
+include_directories(.)
+enable_testing()
+add_executable(test_insert test_insert.cpp)
+add_executable(test_pop test_pop.cpp)
