--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(.)
 enable_testing()
-add_executable(test_insert test_insert.cpp)
-add_executable(test_pop test_pop.cpp)
-add_test(insert test_insert)
-add_test(pop test_insert)
+add_executable(test-insert test_insert.cpp)
+add_executable(test-pop test_pop.cpp)
+add_executable(perf-over-rbtree perf_rbtree.cpp)
+add_test(insert test-insert)
+add_test(pop test-insert)
