--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,18 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
 include_directories(.)
 enable_testing()
+find_library(unwind REQUIRED)
 add_executable(perf-over-rbtree perf_rbtree.cpp)
 add_executable(test-insert test_insert.cpp)
 add_executable(test-pop test_pop.cpp)
 add_executable(test-construction test_construction.cpp)
 target_compile_options(test-insert PUBLIC -fsanitize=address)
-target_link_options(test-insert PUBLIC -fsanitize=address)
+target_link_options(test-insert PUBLIC -fsanitize=address -lunwind -lunwind-generic)
 target_compile_options(test-pop PUBLIC -fsanitize=address)
-target_link_options(test-pop PUBLIC -fsanitize=address)
+target_link_options(test-pop PUBLIC -fsanitize=address -lunwind -lunwind-generic)
 target_compile_options(test-construction PUBLIC -fsanitize=address)
-target_link_options(test-construction PUBLIC -fsanitize=address)
+target_link_options(test-construction PUBLIC -fsanitize=address -lunwind -lunwind-generic)
+
 add_test(insert test-insert)
 add_test(pop test-insert)
 add_test(construction test-construction)
